--- a/MLDeployment/Genitic_insight/templates/feature_extraction.html
+++ b/MLDeployment/Genitic_insight/templates/feature_extraction.html
@@ -23,6 +23,36 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <script src="{% static 'js/feature_extraction.js' %}"></script>
+
+    <style>
+        
+.result-card { transition: all 0.3s ease; }
+        #loading-spinner { display: none; }
+        .preview-sequence { 
+            font-family: monospace; 
+            background-color: #f8f9fa;
+            padding: 15px;
+            border-radius: 5px;
+            max-height: 150px;
+            overflow-y: auto;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
     
@@ -144,11 +174,6 @@
     <button id="downloadBtn" class="btn btn-success mt-3" style="width: 100%;">
         <i class="fas fa-download"></i> Download CSV
     </button>
-    
-    <!-- Module trainging  -->
-    <a href="{% url 'module_selection_with_features' %}" id="Module" class="btn btn-success mt-3" style="width: 100%;" onclick="passFeaturesToModule()">
-        Modules
-    </a>
 
 </div>
 
@@ -507,30 +532,7 @@
         }
     });
     
-    // Modules button to send the CSV data before redirecting.
-    document.getElementById('Module').addEventListener('click', function(e) {
-        e.preventDefault();
-        const url = this.href;
-        const csvContent = extractedData.map(row => row.join(",")).join("\n");
     
-        fetch('/feature_extraction/save_extracted_data/', {
-            method: 'POST',
-            body: JSON.stringify({ csv_data: csvContent }),
-            headers: {
-                'Content-Type': 'application/json',
-                'X-CSRFToken': getCookie('csrftoken'),
-            },
-        })
-        
-        .then(response => {
-            if (response.ok) {
-                window.location.href = url;
-            } else {
-                alert('Error saving extracted features.');
-            }
-        })
-        .catch(error => console.error('Error:', error));
-    });
 
 
 
