--- a/MLDeployment/Genitic_insight/templates/partials/navbar.html
+++ b/MLDeployment/Genitic_insight/templates/partials/navbar.html
@@ -19,11 +19,6 @@
                         <i class="bi bi-gear me-1"></i>Features
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link {% if request.path == '/data_visualization/' %}active{% endif %}" 
-                       href="{% url 'data_visualization' %}">
-                        <i class="bi bi-bar-chart-line me-1"></i>Visualization
-                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link {% if request.path == '/module-selection/' %}active{% endif %}" 
@@ -32,10 +27,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if request.path == '/evaluation-values/' %}active{% endif %}" 
-                       href="{% url 'evaluation_values' %}">
-                        <i class="bi bi-graph-up me-1"></i>Evaluation
+                    <a class="nav-link {% if request.path == '/about/' %}active{% endif %}" 
+                       href="{% url 'about' %}">
+                        <i class="bi bi-info-circle me-1"></i>About
                     </a>
+                </li>
                 </li>
             </ul>
         </div>
